@@ -73,3 +73,4 @@
 /twitter_terms_frequency/add_foreign_key_to_tweets.sql
 /twitter_terms_frequency/drop_foreign_key_to_calendar_date.sql
 /twitter_terms_frequency/drop_column_calendar_date_id.sql
+/wastewater_metrics/create.sql
